--- a/public/style.css
+++ b/public/style.css
@@ -350,6 +350,23 @@ img {
       background-color: #fff;
       color: #232323; }
 
+.oneMusic-btnCustom {
+    background-color: #5c5c5c;
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    min-width: 212px;
+    height: 49px;
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    padding: 0 30px;
+    font-size: 16px;
+    line-height: 47px;
+    font-weight: 700;
+}
+
+
 /* :: 4.0 Header Area CSS */
 .header-area {
   position: absolute;
@@ -1145,8 +1162,7 @@ img {
     width: 100%;
     height: 50px;
     border: 1px solid #000000;
-    font-size: 12px;
-    font-style: italic;
+    font-size: 20px;
     padding: 0 20px;
     border-radius: 0; }
     .login-content .form-control:focus {
